--- a/doc/rapport/rapport.tex
+++ b/doc/rapport/rapport.tex
@@ -31,6 +31,7 @@
 
 \maketitle
 
+%=================================================================================================
 \section{Introduction}
 
 % Context
@@ -58,7 +59,9 @@ Then we try to compare the theoretical advantages of solving dual problem instea
 Then we study computational performances of the method by trying to apply SDCA on concret problems.
 Finally we conclude on SDCA strengths and weaknesses.
 
+
 \newpage
+%=================================================================================================
 \section{The dual problem of the logistic regression}
 
 In this paper, we study the SDCA algorithm on several problems.
@@ -95,47 +98,50 @@ Where, $w^* = \sum_i \alpha_i y_i x_i$.
 
 It leads to the following dual problem :
 \begin{equation}
-	\begin{array}{cl}
-		     &\max_{\alpha} \sum_{i \in I} (-\alpha_i \log(\alpha_i) - (C-\alpha_i) \log(C - \alpha_i)) - \frac{1}{2} \alpha^TQ\alpha\\
-		s.t. &I = \{i,\ 0 < \alpha_i < C \}\\
-		     &0 \leq \alpha_i \leq C
-	\end{array}
+	\begin{aligned}
+		& \max_{\alpha} & &\sum_{i \in I} (-\alpha_i \log(\alpha_i) - (C-\alpha_i) \log(C - \alpha_i)) - \frac{1}{2} \alpha^TQ\alpha\\
+		& s.t.          & &I = \{i,\ 0 < \alpha_i < C \}\\
+		&               & &0 \leq \alpha_i \leq C
+	\end{aligned}
 \end{equation}
 
 We used the notation $Q = (Q_{ij})_{i,j}$ where $Q_{ij} = y_i x_i^T x_j y_j$
 
-Now that we have the dual problem, we need to solve a maximize it.
+Now that we have the dual problem, we need to maximize it.
 To do so, we will use in the coordinate ascent method, which consist in optimizing the objective function coordinate by coordinate (or with groups of coordinates).
 
 
-\section{Methods}
-%3 pages
-(a) specific problem studied \\
-(b) related work \\
-(c) model, main idea \\
-(d) specific methodology \\
-(e) algorithms \\
-
-
+\newpage
+%=================================================================================================
+\section{The SDCA algorithm}
+% 3 pages
+% (a) specific problem studied
+% (b) related work
+% (c) model, main idea
+% (d) specific methodology
+% (e) algorithms
 
 Let $x_1, \dots, x_n \in \mathbb{R}^d$, $\phi_1, \dots, \phi_n$ scalar convex functions, $\lambda > 0$ regularization parameter.
-Let focus on the following optimization problem:
+Let us focus on the following optimization problem:
+
 \begin{equation}
     \min_{w \in \mathbb{R}^d} P(w) \quad \text{ where } P(w) = \left[ \dfrac{1}{n} \sum_{i=1}^n \phi_i(w^\top x_i) + \dfrac{\lambda}{2}\norm{w}^2 \right]
     \label{primal}
 \end{equation}
 with solution $w^{*} = \arg \min_{w \in \mathbb{R}^d} P(w)$.
+
 Moreover, we say that a solution $w$ is $\epsilon_P$-sub-optimal if $P(w) - P(w^{*}) \leq \epsilon_P$.
 We analyze here the required runtime to find an $\epsilon_P$-sub-optimal solution using SDCA. (détailler + haut différence entre SGD et SDCA)
 
 Let $\phi_i^{*} : \mathbb{R} \rightarrow \mathbb{R}$ be the convex conjugate of $\phi_i$ : $\phi_i^{*}(u) = \max_z (zu-\phi_i(z))$.
+
 The dual problem of \eqref{primal} is defined as follows:
 \begin{equation}
     \max_{\alpha \in \mathbb{R}^n} D(\alpha) \quad \text{ where } D(\alpha) = \left[ \dfrac{1}{n} \sum_{i=1}^n -\phi_i^{*}(-\alpha_i) - \dfrac{\lambda}{2}\norm{\dfrac{1}{\lambda n}\sum_{i=1}^n \alpha_ix_i}^2 \right]
     \label{dual}
 \end{equation}
-
 with solution $\alpha^{*} = \arg \max_{a \in \mathbb{R}^n} D(\alpha)$.
+
 If we define $w(\alpha) = \frac{1}{\lambda n} \sum_{i=1}^n \alpha_ix_i$, then we have $w(\alpha^{*}) = w^{*}$, $P(w^{*}) = D(\alpha^{*})$, $\forall (w,\alpha), P(w) = D(\alpha)$ due to classic optimization results, and the duality gap $P(w(\alpha)) - P(w^{*})$.
 
 The SDCA algorithm is described below.
@@ -143,34 +149,30 @@ $T_0$ can be chosen between $1$ to $T$, and is generally chosen equal to $T/2$.
 However, in pratice, these parameters are not required as the duality gap is used to terminate the algorithm.
 
 \begin{algorithm}
-\caption{Procedure SCDA with averaging option}
-\begin{algorithmic}
-\Procedure{SCDA}{$\alpha^{(0)},\phi, T_0$}
-\State $w^{(0)} \gets w(\alpha^{(0)})$
-\For{$t = 1, \dots, T$} %FOR
-\State Randomly pick $i$
-\State $\Delta \alpha_i \gets \arg \max -\phi^{*}_i(-(\alpha_i^{(t-1)}+\Delta \alpha_i))-\frac{\lambda n}{2}\norm{w^{(t-1)}+(\lambda n)^{-1}\Delta \alpha_i x_i}^2$ \qquad \qquad \qquad \qquad \qquad (*)
-\State $\alpha^{(t)} \gets \alpha^{(t-1)} + \Delta \alpha_i e_i$
-\State $w^{(t)} \gets w^{(t-1)} + (\lambda n)^{-1} \Delta \alpha_i x_i$
-\EndFor
-\State \textbf{return} $\overline{w} = \frac{1}{T-T_0} \sum_{i = T_0+1}^T w^{(t-1)}$
-\EndProcedure
-\end{algorithmic}
+	\caption{Procedure SCDA with averaging option}
+	\begin{algorithmic}
+		\Procedure{SCDA}{$\alpha^{(0)},\phi, T_0$}
+		\State $w^{(0)} \gets w(\alpha^{(0)})$
+		\For{$t = 1, \dots, T$} %FOR
+		\State Randomly pick $i$
+		\State $\Delta \alpha_i \gets \arg \max -\phi^{*}_i(-(\alpha_i^{(t-1)}+\Delta \alpha_i))-\frac{\lambda n}{2}\norm{w^{(t-1)}+(\lambda n)^{-1}\Delta \alpha_i x_i}^2$ \qquad \qquad \qquad \qquad \qquad (*)
+		\State $\alpha^{(t)} \gets \alpha^{(t-1)} + \Delta \alpha_i e_i$
+		\State $w^{(t)} \gets w^{(t-1)} + (\lambda n)^{-1} \Delta \alpha_i x_i$
+		\EndFor
+		\State \textbf{return} $\overline{w} = \frac{1}{T-T_0} \sum_{i = T_0+1}^T w^{(t-1)}$
+		\EndProcedure
+	\end{algorithmic}
 \end{algorithm}
 
 
-
-
 \newpage
-
+%=================================================================================================
 \section{Experiments}
-%2 pages
-(a) Description of the dataset(s) considered / general problem associated with the data \\
-(b) Description of the protocol of the experiments (setting of the hyperparameters/cross-validation
-procedure/evaluation methodology) \\
-(c) Factual description of the type of results reported (explanation pertaining to the Figures, tables, etc) \\
-(d) Interpretation and discussion of the results (comparison with the baselines, advantages of each
-algorithm, etc) \\
+% 2 pages
+% (a) Description of the dataset(s) considered / general problem associated with the data \\
+% (b) Description of the protocol of the experiments (setting of the hyperparameters/cross-validation procedure/evaluation methodology) \\
+% (c) Factual description of the type of results reported (explanation pertaining to the Figures, tables, etc) \\
+% (d) Interpretation and discussion of the results (comparison with the baselines, advantages of each algorithm, etc) \\
 
 In this study, SDCA is computed either for $L$-Lipschitz loss functions or for $(1/\gamma)$-smooth loss functions.
 We recall that a function $\phi_i : \mathbb{R} \rightarrow \mathbb{R}$ is $L$-Lipschitz if $\forall a,b \in \mathbb{R}$, $\abs{\phi_i(a)-\phi_i(b)} \leq L \abs{a-b}$, and that a function $\phi_i : \mathbb{R} \rightarrow \mathbb{R}$ is $(1/\gamma)$-smooth if it is differentiable and its derivative is (1/$\gamma)$-Lipschitz.
@@ -221,11 +223,12 @@ To obtain an expected duality gap of $\mathbb{E}[P(\overline{w})-D(\overline{\al
 
 
 \newpage
+%=================================================================================================
 \section{Conclusion}
-%1/2 page
-(a) summary \\
-(b) main conclusions and take home messages \\
-(c) Remaining questions/ future directions (only if relevant) \\
+% 1/2 page
+% (a) summary \\
+% (b) main conclusions and take home messages \\
+% (c) Remaining questions/ future directions (only if relevant) \\
 
 
 \end{document}
