--- a/doc/rapport/rapport.tex
+++ b/doc/rapport/rapport.tex
@@ -46,7 +46,7 @@ Yet, the SGD does not have a good stopping criteria, and its solutions are often
 
 % General problem studied, general methodology
 \hspace{2em}
-The Stochastic Dual Coordinate Ascent tries to solves the optimization problem by solving its dual problem.
+The Stochastic Dual Coordinate Ascent (SDCA) tries to solves the optimization problem by solving its dual problem.
 Instead of optimizing the weights, we optimize a dual variable from which we can compute the weights and thus solve the former.
 This method can give good results for specific problems : for instance, solving the dual problem of the SVM has proven to be effective and to give interesting results, with a linear convergence in some cases.
 
@@ -56,58 +56,112 @@ In this report, we compile the key theoretical points necessary to have a global
 
 % Structure of the report
 \hspace{2em}
-First we introduce the general forms of the machine learning problems we want to use SDCA on and how we get to the dual form.
-We introduce the duality gap and how it is useful.
+First we introduce the SDCA and its principles.
+We then present the machine learning problem our report focuses on.
 Then we study computational performances of the method by trying to apply SDCA on concret problems.
 Finally we conclude on SDCA strengths and weaknesses.
 
 \paragraph{Note} \textit{We especially added experimentations since the presentation of our poster.}
 
-\newpage
+
 %=================================================================================================
-\section{Methods}
+\section{Purpose of the report: a new SGD-like method}
 % 3 pages
 % (a) [DONE] ...... specific problem studied
 % (c) [DONE] ...... model, main idea
 % (d) [IRRELEVANT]  specific methodology
 % (e) [DONE] ...... algorithms
 
-\subsection{Dual problem}
+\subsection{Difference between SGD and SDCA}
 
-Since a machine learning problem is an optimization problem, one can try to write its dual.
+%A REFORMULER : COPIER / COLLER DE L'ARTICLE !
+%Surtout que eps_P sub optimal est défini plus loin...
 
-As an example, we present a dual problem for the logistic regression.
-The multiclass logistic regression, with the cross entropy loss, is a generalization of the binary logistic regression that requires more work, so for now we stick to the binary problem which is interesting enough.
+\hspace{2em}
+A simple approach for solving Support Vector Machine learning is Stochastic gradient Descent (SGD).
+SGD finds an $\epsilon_P$-sub-optimal solution in time $O(1/(\lambda \epsilon_P))$.
+This runtime does not depend on $n$ and therefore is favorable when $n$ is very large.
+However, the SGD approach has several disadvantages:
 
-We use the following usual notations :
-\begin{itemize}
-	\item[] $X \in \mathbf{X} = \mathbb{R}^p$ the random variable for the description space;
-	\item[] $Y \in \mathbf{Y} = \{-1,1\}$ the random variable for the label.
-\end{itemize}
+\begin{enumerate}
+    \item it does not have a clear stopping criterion
+    \item it tends to be too aggressive at the beginning of the optimization process, especially when $\lambda$ is very small
+    \item while SGD reaches a moderate accuracy quite fast, its convergence becomes rather slow when we are interested in more accurate solutions
+\end{enumerate}
+
+\hspace{2em}
+Therefore, an alternative approach is Dual Coordinate Ascent (DCA), which solves the dual problem instead of the primal problem.
+
+\subsection{General SDCA procedure}
+
+Let $x_1, \dots, x_n \in \mathbb{R}^d$, $\phi_1, \dots, \phi_n$ scalar convex functions, $\lambda > 0$ regularization parameter.
+
+Let us focus on the following optimization problem:
+\begin{equation}
+    \min_{w \in \mathbb{R}^d} P(w) = \left[ \dfrac{1}{n} \sum_{i=1}^n \phi_i(w^\top x_i) + \dfrac{\lambda}{2}\norm{w}^2 \right]
+    \label{primal}
+\end{equation}
+with solution $w^{*} = \arg \min_{w \in \mathbb{R}^d} P(w)$.
+
+We say that a solution $w$ is $\epsilon_P$-sub-optimal if $P(w) - P(w^{*}) \leq \epsilon_P$.
+
+We analyze here the required runtime to find an $\epsilon_P$-sub-optimal solution using SDCA.
+
+Let $\phi_i^{*} : \mathbb{R} \rightarrow \mathbb{R}$ be the convex conjugate of $\phi_i$ : $\phi_i^{*}(u) = \max_z (zu-\phi_i(z))$.
+The dual problem of \eqref{primal} is defined as follows:
+\begin{equation}
+    \max_{\alpha \in \mathbb{R}^n} D(\alpha) = \left[ \dfrac{1}{n} \sum_{i=1}^n -\phi_i^{*}(-\alpha_i) - \dfrac{\lambda}{2}\norm{\dfrac{1}{\lambda n}\sum_{i=1}^n \alpha_ix_i}^2 \right]
+    \label{dual}
+\end{equation}
+with solution $\alpha^{*} = \arg \max_{a \in \mathbb{R}^n} D(\alpha)$.
+
+We define $w(\alpha) = \frac{1}{\lambda n} \sum_{i=1}^n \alpha_ix_i$.
+Thanks to classic optimization results, we then have :
+
+\begin{equation}
+	w(\alpha^{*}) = w^{*}
+\end{equation}
+\begin{equation}
+	P(w^{*}) = D(\alpha^{*})
+\end{equation}
+\begin{equation}
+	\forall (w,\alpha), P(w) = D(\alpha)
+\end{equation}
+
+We define the duality gap as $P(w(\alpha)) - P(w^{*})$.
+
+The SDCA algorithm is described further.
+$T_0$ can be chosen between $1$ to $T$, and is generally chosen equal to $T/2$.
+However, in pratice, these parameters are not required as the duality gap is used to terminate the algorithm.
+
+\subsection{Focus on the logistic regression}
+
+In order to fully grasp the method behind the first paper, let's take an example with the logistic regression.
+We will consider logistic regression only for binary classification.
+
+We use the following usual notations : $X \in \mathbf{X} = \mathbb{R}^p$ the random variable for the description space, and $Y \in \mathbf{Y} = \{-1,1\}$ the random variable for the label.
 
 We recall that the model is the following :
 \begin{equation}
 	\frac{\mathbb{P}(y=1 | X=x)}{\mathbb{P}(y=-1 |X=x)} = w^T x, \quad w \in \mathbb{R}^p
 \end{equation}
 
-We want to find $w$ so that it maximizes the likelihood, or log-likelihood, with a term of regularization:
+We want to find $w$ such that it maximizes the likelihood, or log-likelihood, with a term of regularization:
 \begin{equation}
-	\min_w C \sum_i \log(1 + e^{-y_iw^Tx_i)}  + \frac{1}{2} w^Tw
+	\min_w C \sum_i \log\left(1 + e^{-y_iw^Tx_i}\right)  + \frac{1}{2} w^Tw
 \end{equation}
 
-In order to get the dual problem, we rewrite it with an artificial constraint $z_i = y_iw^Tx_i$, and we have the following lagrangian :
+In order to get the dual problem, we rewrite it with an artificial constraint $z_i = e^{-y_iw^Tx_i}$, and we have the following lagrangian :
 \begin{equation}
-	\mathcal{L}(w, z, \alpha) = \sum_i (C \log(1+z_i) + \alpha_i z_i) - \sum_i \alpha_i e^{-z_i} + \frac{1}{2}w^Tw 
+	\mathcal{L}(w, z, \alpha) = \sum_i (C \log\left(1+z_i\right) + \alpha_i z_i) - \sum_i \alpha_i e^{-y_iw^Tx_i} + \frac{1}{2}w^Tw 
 \end{equation}
 
-We note $w^*$ and $z^*$ the variables solution of the optimization problem
+We will note $w^* = \sum_i \alpha_i y_i x_i$ and $z^*$ the variables solution of the optimization problem
 \begin{equation}
 	\min_{w, z} \mathcal{L}(w, z, \alpha) = \mathcal{L}(w^*, z^*, \alpha) = \psi(\alpha) 
 \end{equation}
 
-Where, $w^* = \sum_i \alpha_i y_i x_i$.
-
-It leads to the following dual problem :
+In fact, it leads to the following dual problem :
 \begin{equation}
 	\begin{aligned}
 		& \max_{\alpha} & &\sum_{i \in I} (-\alpha_i \log(\alpha_i) - (C-\alpha_i) \log(C - \alpha_i)) - \frac{1}{2} \alpha^TQ\alpha\\
@@ -116,122 +170,57 @@ It leads to the following dual problem :
 	\end{aligned}
 \end{equation}
 
-We note $Q = (Q_{ij})_{i,j}$ where $Q_{ij} = y_i x_i^T x_j y_j$. It appears that the optimization problem is fully parametrized by the scalar products of the data.
+Now we got the dual problem, we need to solve a maximization problem.
+To do so, we will use in this paper the coordinate ascent method, which consist in optimizing the objective function coordinate by coordinate (or with groups of coordinates).
+The SDCA algorithm is described in the next subsection.
 
-\subsection{A more generic form}
+\subsection{SDCA algorithm}
 
-If we consider now a generic loss function $\phi$, either L-Lipschitz or ($1/\gamma$)-smooth, we can rewrite the optimization problem as follow, where P refers to primal form :
-\begin{equation}
-    \min_{w \in \mathbb{R}^d} P(w) \quad \text{ where } P(w) = \left[ \dfrac{1}{n} \sum_{i=1}^n \phi_i(w^\top x_i) + \dfrac{\lambda}{2}\norm{w}^2 \right]
-    \label{primal}
-\end{equation}
-with solution $w^{*} = \arg \min_{w \in \mathbb{R}^d} P(w)$.
-
-Let's now introduce the convex conjugate, a very useful tool in the dual space. It is defined as follow $\phi_i$ : $\phi_i^{*}(u) = \max_z (zu-\phi_i(z))$. In the case $\phi_i$ is (1/$\gamma$)-smooth, its convex conjugate $\phi_i^*$ is $\gamma$-strongly convex. We are now able to have a compact notation for the dual problem :
-\begin{equation}
-    \max_{\alpha \in \mathbb{R}^n} D(\alpha) \quad \text{ where } D(\alpha) = \left[ \dfrac{1}{n} \sum_{i=1}^n -\phi_i^{*}(-\alpha_i) - \dfrac{\lambda}{2}\norm{\dfrac{1}{\lambda n}\sum_{i=1}^n \alpha_ix_i}^2 \right]
-    \label{dual}
-\end{equation}
-with solution $\alpha^{*} = \arg \max_{a \in \mathbb{R}^n} D(\alpha)$.
-
-Some loss functions used in the report are described in the table in appendix \ref{appendix-losses}.
-
-\subsection{SDCA principle}
-
-\hspace{2em}
-When optimizing with the standard SGD, the learning rate $\epsilon$ is not adaptative, and it can be more or less complicated to find a good one, which could provide good properties of convergence.
-
-\hspace{2em}
-With DCA, instead of ascending in the direction of the gradient with a fixed increment, it maximizes the objective value on one dual coordinate at once.
-The idea is then to repeat the operation on all dual coordinate so that it converges to the maximum of the objective function.
-We can then give it stochastic properties by chosing randomly the coordinate to optimize at each iteration : it is then the SDCA.
-
-\subsection{Duality Gap}
-
-SDCA optimizes the dual problem, which is not the primal problem.
-This difference is called the duality gap, which we explain here.
-
-Let $x_1, \dots, x_n \in \mathbb{R}^d$, $\phi_1, \dots, \phi_n$ scalar convex functions, $\lambda > 0$ regularization parameter.
-
-Let us focus on the following optimization problem:
-
-\begin{equation}
-	\min_{w \in \mathbb{R}^d} P(w) \quad \text{ where } P(w) = \left[ \dfrac{1}{n} \sum_{i=1}^n \phi_i(w^\top x_i) + \dfrac{\lambda}{2}\norm{w}^2 \right]
-	\label{primal}
-\end{equation}
-with solution $w^{*} = \arg \min_{w \in \mathbb{R}^d} P(w)$.
-
-Moreover, we say that a solution $w$ is $\epsilon_P$-sub-optimal if $P(w) - P(w^{*}) \leq \epsilon_P$.
-
-We analyze here the required runtime to find an $\epsilon_P$-sub-optimal solution using SDCA.
-
-Let $\phi_i^{*} : \mathbb{R} \rightarrow \mathbb{R}$ be the convex conjugate of $\phi_i$ : $\phi_i^{*}(u) = \max_z (zu-\phi_i(z))$.
-
-The dual problem of \eqref{primal} is defined as follows:
-\begin{equation}
-	\max_{\alpha \in \mathbb{R}^n} D(\alpha) \quad \text{ where } D(\alpha) = \left[ \dfrac{1}{n} \sum_{i=1}^n -\phi_i^{*}(-\alpha_i) - \dfrac{\lambda}{2}\norm{\dfrac{1}{\lambda n}\sum_{i=1}^n \alpha_ix_i}^2 \right]
-	\label{dual}
-\end{equation}
-with solution $\alpha^{*} = \arg \max_{a \in \mathbb{R}^n} D(\alpha)$.
-
-% cette phrase ne veut rien dire, il faut la reformuler
-Let $w(\alpha) = \frac{1}{\lambda n} \sum_{i=1}^n \alpha_ix_i$.
-We have $w(\alpha^{*}) = w^{*}$, $P(w^{*}) = D(\alpha^{*})$, $\forall (w,\alpha), P(w) = D(\alpha)$ due to classic optimization results.
-
-We define the duality gap : $P(w(\alpha)) - P(w^{*})$
-
-\subsection{The SDCA algorithm}
-
-The SDCA algorithm is as follow.
-
-\begin{algorithm}
-	\caption{Procedure SCDA with averaging option}
-	\begin{algorithmic}
-		\Procedure{SCDA}{$\alpha^{(0)},\phi, T_0$}
-		\State $w^{(0)} \gets w(\alpha^{(0)})$
-		\For{$t = 1, \dots, T$} %FOR
-		\State Randomly pick $i$
-		\State $\Delta \alpha_i \gets \arg \max -\phi^{*}_i(-(\alpha_i^{(t-1)}+\Delta \alpha_i))-\frac{\lambda n}{2}\norm{w^{(t-1)}+(\lambda n)^{-1}\Delta \alpha_i x_i}^2$ \qquad \qquad \qquad \qquad \qquad (*)
-		\State $\alpha^{(t)} \gets \alpha^{(t-1)} + \Delta \alpha_i e_i$
-		\State $w^{(t)} \gets w^{(t-1)} + (\lambda n)^{-1} \Delta \alpha_i x_i$
-		\EndFor
-		\State \textbf{return} $\overline{w} = \frac{1}{T-T_0} \sum_{i = T_0+1}^T w^{(t-1)}$
-		\EndProcedure
-	\end{algorithmic}
+\begin{algorithm}[H]
+    \caption{Procedure SCDA}
+    \begin{algorithmic}
+        \Procedure{SCDA}{$\alpha^{(0)},\phi, T_0, T$}
+        \State $w^{(0)} \gets w(\alpha^{(0)})$
+        \For{$t = 1, \dots, T$} %FOR
+        \State Randomly pick $i$
+        \State $\Delta \alpha_i \gets \arg \max -\phi^{*}_i(-(\alpha_i^{(t-1)}+\Delta \alpha_i))-\frac{\lambda n}{2}\norm{w^{(t-1)}+(\lambda n)^{-1}\Delta \alpha_i x_i}^2$ \qquad \qquad \qquad \qquad \qquad (*)
+        \State $\alpha^{(t)} \gets \alpha^{(t-1)} + \Delta \alpha_i e_i$
+        \State $w^{(t)} \gets w^{(t-1)} + (\lambda n)^{-1} \Delta \alpha_i x_i$
+        \EndFor
+        \If{Averaging option}
+        \State \textbf{return} $\overline{w} = \frac{1}{T-T_0} \sum_{i = T_0+1}^T w^{(t-1)}$
+        \EndIf
+        \If{Random option}
+        \State \textbf{return} $\overline{w} = w^{(t)}$ for a random $t \in [|T_0+1, T|]$
+        \EndIf
+        \EndProcedure
+    \end{algorithmic}
 \end{algorithm}
 
-$T_0$ can be chosen between $1$ to $T$, and is generally chosen equal to $T/2$.
-However, in pratice, these parameters are not required as the duality gap is used to terminate the algorithm.
 
-\subsection{Stopping time}
+\subsection{Computation of closed forms}
 
-We consider the following assumptions: $\forall i, \norm{x_i} \leq 1$, $\forall (i,a), \phi_i(a) \geq 0$ and $\forall i, \phi_i(0) \leq 1$.
+\hspace{2em}
+In the studied articles, SDCA is computed either for $L$-Lipschitz loss functions or for $(1/\gamma)$-smooth loss functions.
+We recall that a function $\phi_i : \mathbb{R} \rightarrow \mathbb{R}$ is $L$-Lipschitz if $\forall a,b \in \mathbb{R}$, $\abs{\phi_i(a)-\phi_i(b)} \leq L \abs{a-b}$, and that a function $\phi_i : \mathbb{R} \rightarrow \mathbb{R}$ is $(1/\gamma)$-smooth if it is differentiable and its derivative is (1/$\gamma)$-Lipschitz.
+Moreover, if $\phi_i$ is $(1/\gamma)$-smooth, then $\phi_i^{*}$ is $\gamma$-strongly convex.
+The different loss functions used are described in the table below.
+For experimentation, we mainly focused on log loss and square loss.
 
+\hspace{2em}
+Some loss functions used in the report are described in the table in appendix \ref{appendix-losses}.
+
+\subsection{Algorithm termination}
+
+For the sake of simplicity, the studied articles consider the following assumptions: $\forall i, \norm{x_i} \leq 1$, $\forall (i,a), \phi_i(a) \geq 0$ and $\forall i, \phi_i(0) \leq 1$.
 Under these assumptions, we have the following theorem:
 
-% reference du theoreme ?
 \paragraph{Theorem} Consider Procedure SDCA with $\alpha^{(0)} = 0$.
-Assume that $\forall i, \phi_i$ is $L$-Lipschitz (resp.
-$(1/\gamma)$-smooth).
+Assume that $\forall i, \phi_i$ is $L$-Lipschitz (resp. $(1/\gamma)$-smooth).
 To obtain an expected duality gap of $\mathbb{E}[P(\overline{w})-D(\overline{\alpha})] \leq \epsilon_P$, it suffices to have a total number of iterations of
-\begin{equation}
-	T \geq n + \max\left(0, \left\lceil n \log \left(\dfrac{\lambda n}{2 L^2} \right) \right\rceil \right) + \dfrac{20 L^2}{\lambda \epsilon_P} \quad \left( \text{resp. } T > \left(n + \dfrac{1}{\lambda \gamma} \right) \log \left[ \dfrac{1}{(T-T_0)\epsilon_P} \left(n + \dfrac{1}{\lambda \gamma} \right) \right] \right)
-\end{equation}
-
-\subsection{Why SDCA over SGD ?}
-
-SGD finds an $\epsilon_P$-sub-optimal solution in time $O(1/(\lambda \epsilon_P))$.
-This runtime does not depend on $n$ and therefore is favorable when $n$ is very large.
-However, the SGD approach has several disadvantages:
-
-\begin{enumerate}
-    \item it does not have a clear stopping criterion;
-    \item it tends to be too aggressive at the beginning of the optimization process, especially when $\lambda$ is very small;
-    \item while SGD reaches a moderate accuracy quite fast, its convergence becomes rather slow when we are interested in more accurate solutions.
-\end{enumerate}
+$$T \geq n + \max\left(0, \left\lceil n \log \left(\dfrac{\lambda n}{2 L^2} \right) \right\rceil \right) + \dfrac{20 L^2}{\lambda \epsilon_P} \quad \left( \text{resp. } T > \left(n + \dfrac{1}{\lambda \gamma} \right) \log \left[ \dfrac{1}{(T-T_0)\epsilon_P} \left(n + \dfrac{1}{\lambda \gamma} \right) \right] \right)$$ 
 
 
-\newpage
 %=================================================================================================
 \section{Experiments}
 % 2 pages
@@ -249,10 +238,9 @@ The experiments in this report were done with our own implementation, available 
 We implemented :
 
 \begin{itemize}
-	\item Logistic regression estimators that can use an \texttt{Optimizer} object
-	\item SGD optimizer
-	\item SDCA optimizer
-	\item projections (polynomial and gaussian)
+	\item \texttt{Estimator} objects that can fit, predict and score themselves : logistic loss and square loss
+	\item \texttt{Optimizer} objects used for fitting : SGD and SDCA
+	\item projections : polynomial and gaussian
 	\item some data utilities
 \end{itemize}
 
@@ -276,7 +264,7 @@ The hyperparameters were fixed to standart values.
 
 % TODO comment raw results
 
-\newpage
+
 %=================================================================================================
 \section*{Conclusion}
 % 1/2 page
@@ -284,7 +272,7 @@ The hyperparameters were fixed to standart values.
 % (b) main conclusions and take home messages \\
 % (c) Remaining questions/ future directions (only if relevant) \\
 
-\newpage
+
 %=================================================================================================
 \section*{References}
 
